# inline-js

./: .gitignore  .travis.yml  NOTES.md  README.md  appveyor.yml  cabal.project  cabal.project.freeze  default.nix  package.yaml  shell.nix  stack-nix.yaml  stack.yaml
.circleci/: config.yml
.github/workflows/: build-haddock.yml  pipeline.yml  test-cabal.yml  test-stack-alpine.yml  test-stack.yml
examples/: package.yaml
examples/test/: inline-js-examples.hs
inline-javascript/: CHANGELOG.md  LICENSE  package.yaml
inline-javascript-examples/: Setup.hs  package.yaml
inline-javascript-examples/test/: inline-javascript-examples.hs
inline-javascript/jsbits/: package.json  server.js
inline-javascript/src/Language/JavaScript/: Inline.hs
inline-javascript/src/Language/JavaScript/Inline/: Session.hs
inline-js/: CHANGELOG.md  LICENSE  README.md  Setup.hs  inline-js.cabal  package.yaml
inline-js-core/: LICENSE  inline-js-core.cabal  package.yaml
inline-js-core/cbits/: JSVal.cmm  jsval.cmm  posix.c  win32.c
inline-js-core/jsbits/: context.mjs  echo.mjs  eval.js  eval.mjs  index.js  ipc.mjs  jsparser.js  jsval.js  jsval.mjs  lock.js  lock.mjs  main.mjs  package-lock.json  package.json  pipe.js  pipe.mjs  server.js  transport.mjs
inline-js-core/src/Language/JavaScript/Inline/: Command.hs  Core.hs  JSCode.hs  Message.hs  MessageCounter.hs  Session.hs
inline-js-core/src/Language/JavaScript/Inline/Core/: Bracket.hs  Class.hs  Command.hs  Dict.hs  EvalServer.hs  Exception.hs  Export.hs  HSCode.hs  IPC.hs  Import.hs  Instruction.hs  Internal.hs  JSCode.hs  JSParser.hs  JSVal.hs  Message.hs  MessageCounter.hs  NodePath.hs  NodeVersion.hs  Session.hs  Utils.hs  WaitForProcess.hs
inline-js-core/src/Language/JavaScript/Inline/Core/Message/: Class.hs  Eval.hs  HSCode.hs
inline-js-core/src/Language/JavaScript/Inline/Core/NamedPipe/: Posix.hs  Win32.hs
inline-js-core/src/Language/JavaScript/Inline/Internals/: IPC.hs
inline-js-core/src/Language/JavaScript/Inline/Message/: Class.hs  Eval.hs
inline-js-core/src/Language/JavaScript/Inline/Transport/: Process.hs  Type.hs  Utils.hs
inline-js-core/testdata/: echo.mjs  left-pad-1.3.0.tar  left-pad.tar
inline-js-core/tests/: Main.hs  inline-js-core-tests.hs
inline-js-core/tests/Tests/: Echo.hs  Evaluation.hs  LeftPad.hs  Wasm.hs
inline-js-core/tests/Tests/Helpers/: Message.hs
inline-js-examples/: CHANGELOG.md  README.md  inline-js-examples.cabal  package.yaml
inline-js-examples/src/Language/JavaScript/Inline/Examples/: Stream.hs  Utils.hs  Wasm.hs
inline-js-examples/src/Language/JavaScript/Inline/Examples/Utils/: LazyIO.hs
inline-js-parser/: index.mjs  package-lock.json  package.json
inline-js-tests/: CHANGELOG.md  README.md  inline-js-tests.cabal  package.yaml
inline-js-tests/app/: NPMPath.hs  inline-js-tests.hs
inline-js-tests/test/: inline-js-tests.hs
inline-js-tests/test/Language/JavaScript/Inline/Tests/Utils/: Aeson.hs
inline-js-tests/tests/: inline-js-tests.hs
inline-js-tests/tests/Language/JavaScript/Inline/Tests/Utils/: Aeson.hs
inline-js/jsbits/: main.js  server.js
inline-js/src/Language/JavaScript/: Inline.hs
inline-js/src/Language/JavaScript/Inline/: Aeson.hs  Async.hs  Class.hs  Command.hs  Configure.hs  JSCode.hs  JSON.hs  JSParse.hs  JsonConvertible.hs  Message.hs  MessageCounter.hs  Puppeteer.hs  Session.hs  Splices.hs  TH.hs
inline-js/tests/: Main.hs  eval.hs  inline-js-tests.hs  pingpong.hs  puppeteer.hs
inline-js/tests/Tests/: Echo.hs  Evaluation.hs  LeftPad.hs  PingPong.hs  Quotation.hs  Wasm.hs
inline-js/tests/Tests/Helpers/: Message.hs
jsbits/: package.json  server.js
nix/: cabal-extras.patch  ci.nix  haddock.nix  jsbits.nix  nixpkgs.nix  pkg-set.nix  project.nix  sources.json  src.nix
nodejs-eval/: CHANGELOG.md  README.md  Setup.hs  package.yaml
nodejs-eval-test/: Setup.hs  package.yaml
nodejs-eval-test/test/: nodejs-eval-test.hs
nodejs-eval/jsbits/: package.json  server.js
nodejs-eval/src/Language/JavaScript/NodeJS/: CabalHook.hs  Splices.hs
nodejs-eval/src/Language/JavaScript/NodeJS/CabalHook/: Splices.hs
src/Language/JavaScript/: Inline.hs
src/Language/JavaScript/Inline/: Configure.hs  Import.hs  Internals.hs  MonadJS.hs  Session.hs  Splices.hs
src/Language/JavaScript/Inline/Internals/: MsgId.hs  Parser.hs  SessionTypes.hs
