cabal-version:  2.4
name:           inline-js-core
version:        0.0.1
category:       Web
stability:      beta
homepage:       https://github.com/tweag/inline-js#readme
bug-reports:    https://github.com/tweag/inline-js/issues
maintainer:     Shao Cheng <cheng.shao@tweag.io>
copyright:      (c) 2018 Tweag I/O
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    CHANGELOG.md
    LICENSE
data-files:
    jsbits/*.js
    testdata/*.mjs
    testdata/*.tar
    testdata/*.wasm

source-repository head
  type: git
  location: https://github.com/tweag/inline-js

common deps
  autogen-modules:
      Paths_inline_js_core
  build-depends:
      base
    , binary
    , bytestring
    , deepseq
    , directory
    , filepath
    , ghc-prim
    , process
    , stm
  default-language: Haskell2010
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -Wnoncanonical-monad-instances
  other-modules:
      Paths_inline_js_core

library
  import: deps
  exposed-modules:
      Language.JavaScript.Inline.Core
  other-modules:
      Language.JavaScript.Inline.Core.Command
      Language.JavaScript.Inline.Core.Exception
      Language.JavaScript.Inline.Core.Internal
      Language.JavaScript.Inline.Core.JSCode
      Language.JavaScript.Inline.Core.Message.Class
      Language.JavaScript.Inline.Core.Message.Eval
      Language.JavaScript.Inline.Core.NodeVersion
      Language.JavaScript.Inline.Core.Session
  hs-source-dirs:
      src

test-suite inline-js-core-tests
  import: deps
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
      Tests.Echo
      Tests.Evaluation
      Tests.LeftPad
      Tests.PingPong
      Tests.Wasm
  hs-source-dirs:
      tests
  ghc-options: -threaded -rtsopts
  build-depends:
      aeson
    , Cabal
    , inline-js-core
    , QuickCheck
    , smallcheck
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , tasty-smallcheck
    , text
