cabal-version:      2.2
name:               inline-js-core
version:            0.0.1.0
synopsis:           Call JavaScript from Haskell.
description:
  Please see <https://github.com/tweag/inline-js> for details.

category:           Web
homepage:           https://github.com/tweag/inline-js#readme
bug-reports:        https://github.com/tweag/inline-js/issues
maintainer:         Cheng Shao <cheng.shao@tweag.io>
copyright:          (c) 2018 Tweag I/O
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  jsbits/index.js
  LICENSE
  README.md

source-repository head
  type:     git
  location: https://github.com/tweag/inline-js

library
  exposed-modules:  Language.JavaScript.Inline.Core
  other-modules:
    Language.JavaScript.Inline.Core.Class
    Language.JavaScript.Inline.Core.Dict
    Language.JavaScript.Inline.Core.Exception
    Language.JavaScript.Inline.Core.Export
    Language.JavaScript.Inline.Core.Import
    Language.JavaScript.Inline.Core.Instruction
    Language.JavaScript.Inline.Core.IPC
    Language.JavaScript.Inline.Core.JSVal
    Language.JavaScript.Inline.Core.Message
    Language.JavaScript.Inline.Core.NodePath
    Language.JavaScript.Inline.Core.Session
    Language.JavaScript.Inline.Core.Utils

  hs-source-dirs:   src
  ghc-options:      -Wall
  build-depends:
    , base              >=4.12 && <5
    , binary
    , bytestring
    , Cabal
    , containers
    , directory
    , filepath
    , ghc-prim
    , process
    , stm
    , template-haskell
    , text

  default-language: Haskell2010
